--- a/2-1/index.html
+++ b/2-1/index.html
@@ -9,7 +9,7 @@
     <div id="app">
       <p>{{ text }}</p>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/Vue/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="./script/script.js"></script>
   </body>
 </html>
