--- a/2-1/index2.html
+++ b/2-1/index2.html
@@ -13,8 +13,9 @@
       const data = {
         text: 'goodbye'
       };
-
-      const $text = document.querySelector('.texts');
+ 
+      const $text = document.querySelector('.text');
+      console.log($text);
       $text.innerText= data.text;
     </script>
   </body>
